# dynamodb-rust-concurrent

./: Cargo.toml  README.md  docker-compose.yml
init-aws/: init.sh  users-table.json
src/: common.rs  main.rs
