[package]
name = "dynamodb-rust-concurrent"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.12.2"
async-trait = "0.1.58"
futures = "0.3.25"
rusoto_core = "0.48.0"
rusoto_dynamodb = "0.48.0"
itertools = "0.10.5"
