[package]
name = "dynamodb-rust-concurrent"
version = "0.0.1"
edition = "2021"

[lib]
name = "dynamodb_rust_concurrent"
path = "src/lib.rs"

[[bin]]
name = "simple_loop"
path = "src/bin/simple_loop.rs"

[[bin]]
name = "join_all_loop"
path = "src/bin/join_all_loop.rs"

[[bin]]
name = "buffered_stream"
path = "src/bin/buffered_stream.rs"

[dependencies]
tokio = "1.12.2"
futures = "0.3.25"
rusoto_core = "0.48.0"
rusoto_dynamodb = "0.48.0"
itertools = "0.10.5"
console-subscriber = "0.1.8"
